# TCP-2023

./: CMakeLists.txt  main.cpp
LabWork2_No1/: CMakeLists.txt  main.cpp  Отчёт по лабораторной работе №1 Яншин Тимур ИУ5-22Б.docx
LabWork2_No1/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
LabWork2_No1/mymath/: CMakeLists.txt  mymath.cpp  mymath.h
LabWork2_No2/: CMakeLists.txt  README.md  Отчёт по лабораторной работе №2 Яншин Тимур ИУ5-22Б.docx
LabWork2_No2/planets/: planets.cpp  planets.h
LabWork2_No3/: main.cpp  sunsys.txt  Отчёт по лабораторной работе №3 Яншин Тимур ИУ5-22Б.docx
LabWork2_No3/fraction/: CMakeLists.txt  fraction.cpp  fraction.h
LabWork2_No3/planets/: CMakeLists.txt
LabWork2_No4/: CMakeLists.txt  main.cpp  Отчёт по лабораторной работе №4 Яншин Тимур ИУ5-22Б .docx
LabWork2_No4/MyStack/: CMakeLists.txt  MyStack.h
LabWork2_No5/: CMakeLists.txt  MyLab2_No5.h  main.cpp  Отчёт по лабораторной работе №5 Яншин Тимур ИУ5-22Б.docx
LabWork2_No5/containers/: CMakeLists.txt  MySet.cpp  MySet.h  MyVector.cpp  MyVector.h
LabWork2_No6/: CMakeLists.txt  main.cpp  Отчёт по лабораторной работе №6 Яншин Тимур ИУ5-22Б.docx
LabWork2_No6/polinom/: CMakeLists.txt  MyVector.h  polinom.h  term.h
LabWork2_No7/: CMakeLists.txt  Sailboat.h  Ship.h  Steamboat.h  main.cpp  Отчёт по лабораторной работе №7 Яншин Тимур ИУ5-22Б.docx  Сorvette.h
LabWork2_No7/MyVector/: CMakeLists.txt  MyVector.h
LabWork2_No8/: CMakeLists.txt  Graduate.hpp  LabWork2_No8.h  Point.hpp  input.txt  main.cpp  Отчёт по лабораторной работе №8 Яншин Тимур ИУ5-22Б.docx
