cmake_minimum_required (VERSION 3.8)

set(project "lab4")
project(${project})

set(CMAKE_CXX_STANDARD 23)

set(${project}_SOURCES
        main.cpp)

add_subdirectory(MyStack)

set(${project}_SOURCE_LIST
        ${${project}_SOURCES})

add_executable(${project}
        ${${project}_SOURCE_LIST} )

target_link_libraries(${project} MyStack)
